调整基本样式，基础信息管理和投标管理按钮

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       top: 0;
       width: 51%;
       height: 100%;
-      background: #17b3a3;
+      background: #5E98F8;
       /* Old browsers */
       z-index: 1000;
       -webkit-transform: translateX(0);
